syntax = "proto3";

package retrom;

import "retrom/models/emulators.proto";
import "retrom/models/game-files.proto";
import "retrom/models/games.proto";

message RetromHostInfo {
  string host_name = 1;
  string port = 2;
  string host = 3;
}

enum PlayStatus {
  PLAYING = 0;
  NOT_PLAYING = 1;
}

message PlayGamePayload {
  Game game = 1;
  EmulatorProfile emulator_profile = 2;
  Emulator emulator = 3;
  GameFile file = 4;
}

message StopGamePayload {
  Game game = 1;
}

message GetGamePlayStatusPayload {
  Game game = 1;
}

message GamePlayStatusUpdate {
  int32 game_id = 1;
  PlayStatus play_status = 2;
}
