syntax = "proto3";

package retrom.files;

import "google/protobuf/timestamp.proto";
import "retrom/file-explorer.proto";

message FileStat {
  /* Relative path to the file from the public directory */
  string path = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  FilesystemNodeType node_type = 4;
}

message File {
  FileStat stat = 1;
  bytes content = 2;
}
